Changed project images shape, styled stack elements as tags, fixed reverse order, changed alignmend inside projects

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html {
 
 * {
   font-family: "Helvetica Neue", sans-serif;
-  font-size: 16px;
+  font-size: 20px;
   color: #fff;
 }
 
@@ -25,7 +25,6 @@ body {
 html,
 body {
   /*height: 100%;*/
-
 }
 
 #root {
