--- a/src/components/projectImage/styles.css
+++ b/src/components/projectImage/styles.css
@@ -1,19 +1,20 @@
 .projectImgWrapper {
   display: flex;
+  margin: 24px;
 }
 
 .projectImg {
-  max-width: 20rem;
+  max-width: 300px;
   transition: transform 0.3s;
-  border-radius: 50%;
+  border-radius: 8px;
 }
 
 .projectImg:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
   box-shadow: 0 0 3pt 2pt #e32ada;
   cursor: pointer;
 }
 
 .projectImgUrl {
-  border-radius: 50%;
+  border-radius: 8px;
 }
