--- a/src/components/projectInfo/styles.css
+++ b/src/components/projectInfo/styles.css
@@ -4,24 +4,55 @@
   /*max-width: 40rem;*/
   /*flex-basis: 60%;*/
   width: 100%;
+  /*padding: 24px;*/
+  margin: 0 24px;
+}
+
+.projectName {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 0 4px 16px 4px;
+}
+
+.projectAbout {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 16px 4px;
 }
 
 .stack {
   max-height: 6rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   align-content: flex-start;
-  column-gap: 3rem;
+  /*column-gap: 3rem;*/
+
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
 }
 
 .stackElement {
-  max-width: 8rem;
+  /*max-width: 8rem;*/
+  list-style: none;
+  padding: 8px;
+  margin: 4px;
+  background-color: #500674;
+  border-radius: 4px;
+  border: 1px solid #e32ada;
+  font-size: 16px;
 }
 
-.projectUrls {
+.projectUrlsWrapper {
   display: flex;
   flex-direction: row;
-  gap: 3rem;
+  margin: 16px 4px;
+  /*gap: 3rem;*/
 }
 
+.projectUrl {
+  padding-right: 16px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
